# yew-bulma-notification

./: .gitignore  .npmignore  Cargo.toml  Readme.md  package.json
examples/notification-service/: Cargo.toml  index.html  package.json
examples/notification-service/src/: main.rs
examples/single-notification/: Cargo.toml  index.html  index.scss  package.json
examples/single-notification/src/: main.rs
src/: agent.rs  consumer.rs  index.scss  lib.rs  notification.rs  properties.rs  service.rs
