[package]
name = "yew-bulma-notification"
version = "0.1.0"
authors = ["Elliott Clarke <elliott.clarke.ext@siemens-energy.com>"]
edition = "2018"

[dependencies]
# TODO: pin these to a version once 0.18 is published?
yew = { git = "https://github.com/yewstack/yew/" }
yew-services = { git = "https://github.com/yewstack/yew/" }

[workspace]
members = ["examples/*"]